--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.0.2",
+    "react-router-dom": "^7.0.2",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
